# Soup

./: .dockerignore  .gitignore  .mailmap  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml  plan.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  notify.yml  recipe-validation.yml
docs/: QUANTIZATION.md  README.md  adapters-and-governance.md  backends-and-ops.md  commands.md  compliance.md  data.md  evaluation.md  models.md  peft-and-efficiency.md  performance-and-quantization.md  serving-and-export.md  training.md
docs/superpowers/plans/: 2026-07-05-prm-guided-grpo.md  2026-07-05-soup-shrink-depth-prune.md
docs/superpowers/specs/: 2026-07-05-judge-in-the-loop-suite-design.md  2026-07-05-prm-guided-grpo-design.md  2026-07-05-soup-shrink-depth-prune-design.md
examples/: README.md  synthetic_workflow.md  synthetic_workflow.yaml
examples/configs/: dpo_example.yaml
examples/reward_hacking/: rewards.py
soup_cli/: __init__.py  __main__.py  cli.py  tui_app.py
soup_cli/autopilot/: __init__.py  decisions.py  generate_config.py
soup_cli/cans/: publish.py  run.py  schema.py
soup_cli/commands/: ab.py  active_sample.py  adapters.py  advise.py  agent.py  bench.py  can.py  chat.py  compile_cmd.py  compile_tools.py  completions.py  data.py  data_forge.py  data_mix.py  data_score.py  deploy.py  diagnose.py  diff.py  doctor.py  drift_alarm.py  env.py  eval.py  expect.py  export.py  fetch.py  generate.py  history.py  infer.py  init.py  license_advisor.py  local_rl.py  merge.py  migrate.py  probe.py  profile.py  prune_prompt.py  push.py  quickstart.py  recipes.py  runs.py  (+6 more)
soup_cli/config/: loader.py  schema.py
soup_cli/data/: chat_templates.py  collators.py  formats.py  loader.py  loss_mask.py  sft_format.py  validator.py
soup_cli/data/_fixtures/: chat_preferences.jsonl  reasoning_math.jsonl
soup_cli/data/traces/: quality.py
soup_cli/eval/: calibrate.py  custom.py  gate.py  quant_check.py
soup_cli/experiment/: tracker.py
soup_cli/migrate/: axolotl.py  common.py  unsloth.py
soup_cli/monitoring/: callback.py  display.py  trace_logger.py
soup_cli/plugins/: __init__.py
soup_cli/recipes/: __init__.py  catalog.py
soup_cli/registry/: attach.py  store.py
soup_cli/templates/: __init__.py  chat.yaml  code.yaml  manifest.json  medical.yaml  moe.yaml  orpo.yaml  pretrain.yaml  simpo.yaml  vision.yaml
soup_cli/templates/fetch_examples/: qwen2.5-7b-dpo.yaml  zero3-cpu-offload.json
soup_cli/trainer/: bco.py  distill.py  dpo.py  embedding.py  grpo.py  ipo.py  kto.py  orpo.py  ppo.py  preference.py  pretrain.py  prm.py  reward_model.py  rewards.py  sft.py  simpo.py
soup_cli/ui/: app.py
soup_cli/ui/static/: app.js  index.html  style.css
soup_cli/utils/: activation_offload.py  active_sampler.py  adapter_bisect.py  adapter_branch.py  adapter_diff.py  adapter_merge.py  adapter_pr.py  advise.py  agent_forge.py  airgap_bundle.py  annex_xi.py  anthropic_messages.py  audit_log.py  auto_quant.py  backend_detect.py  batch_probe.py  bitnet.py  blame.py  block_expansion.py  brain_rot.py  brain_rot_lang.py  checklist_dsl.py  checkpoint_trigger.py  classifier.py  cmaes_merge.py  compile_tools.py  constants.py  crash.py  cross_doc_attn.py  curriculum.py  curriculum_dynamic.py  data_forge.py  data_mix.py  data_pipeline.py  data_score.py  delinearize_llama4.py  demo_bundles.py  deploy_autopilot.py  deploy_measure.py  distill.py  (+76 more)
soup_cli/utils/diagnose/: __init__.py  _common.py  badge.py  forgetting.py  format.py  mode_collapse.py  refusal.py  report.py  runner.py
src/soup_cli/: __init__.py  cli.py
src/soup_cli/autopilot/: analyzer.py  decisions.py  generate_config.py
src/soup_cli/cans/: pack.py  run.py  schema.py
src/soup_cli/cloud/: __init__.py  modal.py
src/soup_cli/commands/: _eval_v0550.py  _eval_v0610.py  _eval_v0650.py  _eval_v07110.py  _webhook_cli.py  ab.py  active_sample.py  adapters.py  advise.py  agent.py  airgap.py  apple_adapter.py  attest.py  audit_log.py  autopilot.py  bench.py  bom.py  build.py  can.py  card.py  ci.py  compile_cmd.py  compile_tools.py  data.py  data_canary.py  data_doctor.py  data_forge.py  data_mix.py  data_topics.py  delinearize_llama4.py  deploy.py  diagnose.py  distill_prompt.py  doctor.py  draft.py  edit.py  env.py  eval.py  export.py  fetch.py  (+36 more)
src/soup_cli/config/: loader.py  schema.py
src/soup_cli/data/: augment.py  collators.py  formats.py  loader.py  sft_format.py
src/soup_cli/envs/: __init__.py  _common.py  calculator.py  guess_number.py  retrieval_qa.py
src/soup_cli/eval/: arena.py  benchmarks_v0_43.py  calibrate.py  checkpoint_intelligence.py  custom.py  forgetting.py  gate.py  gate_suites.py  judge.py
src/soup_cli/experiment/: tracker.py
src/soup_cli/mcp_server/: __init__.py  registry.py  server.py
src/soup_cli/migrate/: __init__.py  common.py  llamafactory.py
templates/: chat.yaml  code.yaml  medical.yaml
tests/: conftest.py  test_adapters.py  test_assistant_mask.py  test_attest_signing_verification.py  test_audio.py  test_auto_tuning.py  test_awq_gptq_export.py  test_batch_probe.py  test_bco.py  test_bench.py  test_brain_rot_multilingual.py  test_bugfixes.py  test_build_dag.py  test_cans.py  test_chat_template.py  test_cli.py  test_cli_subprocess.py  test_code_review_critical.py  test_code_review_deferred.py  test_code_review_high.py  test_code_review_medium_low.py  test_code_review_recurring.py  test_config.py  test_crash_reporter.py  test_curriculum.py  test_data.py  test_data_sample.py  test_data_split.py  test_data_tools.py  test_dataset_hub.py  test_dataset_registry.py  test_deploy_ollama.py  test_doctor.py  test_dpo_variants.py  test_embedding.py  test_errors.py  test_eval.py  test_eval_gate.py  test_eval_platform.py  test_export.py  (+248 more)
tests/qa/: v053_qa.md  v07114_qa.md  v0716_qa.md
(+316 files in other folders)
